# ConsultaRustA

./: Cargo.toml  README.md  gdb.gdb
config/: log4rs.yml
crates/api/: Cargo.toml
crates/api/src/: erro_docs.py  errors.rs  main.rs
crates/api/src/views/: ca.rs  mod.rs
crates/cascraper/: Cargo.toml
crates/cascraper/src/: ca.rs  errors.rs  lib.rs  pagina.rs  util.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
src/: main.rs
src/info/: mod.rs  util.rs
src/info/pagina/: sucesso.html
