[package]
name = "consulta_rust_a"
version = "1.0.0"
authors = ["Gabriel Schmidt <glprojetinho@gmail.com>"]
description = "Consulta CA's"
edition = "2021"

[dependencies]
chrono = "^0.4"
scraper = "^0.20"
reqwest = "^0.12"
log4rs = "1.3.0"
log4rs_test_utils = "^0.2"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "^4.5.20", features = ["derive"] }

[[bin]]
path="src/main.rs"
name="consultarca"
