[package]
name = "cascraper"
version = "1.0.0"
authors = ["Gabriel Schmidt <glprojetinho@gmail.com>"]
description = """
Biblioteca que extrai informações do site consultaca.com.
"""
homepage = "https://github.com/glprojetinho2/ConsultaRustA"
repository = "https://github.com/glprojetinho2/ConsultaRustA"
edition = "2021"
license = "Unlicense OR MIT"
rust-version = "1.82"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
log4rs = "1.3.0"
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }

[lib]
name="cascraper"
path = "src/lib.rs"
