[package]
name = "consultarca"
version = "1.0.0"
authors = ["Gabriel Schmidt <glprojetinho@gmail.com>"]
description = """
Ferramenta de linha de comando que extrai informações do site consultaca.com.
"""
homepage = "https://github.com/glprojetinho2/ConsultaRustA"
repository = "https://github.com/glprojetinho2/ConsultaRustA"
rust-version = "1.82"
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
cascraper = { version="1.0.0", path = "../cascraper" }
clap = { version = "4.5.20", features = ["derive"] }
log4rs = "1.3.0"
reqwest = "0.12.9"
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }

[[bin]]
name = "consultarca"
path = "src/main.rs"
